[package]
name = "csv2parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
datafusion = "15.0.0"
snmalloc-rs = "0.3.3"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
